--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Let's Cut</a></li>
             </ul>
-        </nav>
-        <nav>
-            <div class="ham-menu">
+            <div class="ham-menu"></div>
                 <spn></spn>
                 <spn></spn>
                 <spn></spn>
